// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Purpose renders fine renders child unaltered 1`] = `
<Purpose
  purpose="passage"
>
  <div
    data-pie-purpose="passage"
    key=".0"
  >
    text
  </div>
</Purpose>
`;

exports[`Purpose renders fine renders child unaltered without purpose prop 1`] = `
<Purpose>
  <div
    key=".0"
  >
    text
  </div>
</Purpose>
`;

exports[`Purpose renders fine renders children unaltered 1`] = `
<Purpose
  purpose="something"
>
  <div
    data-pie-purpose="something"
    key=".0"
  >
    <div>
      text1
    </div>
    <div>
      text2
    </div>
  </div>
</Purpose>
`;
